tests/ui/extern/extern-rust-fn-type-error-10764.stderr
error[E0308]: mismatched types
  --> $DIR/extern-rust-fn-type-error-10764.rs:6:15
   |
LL | fn main() { f(bar) }
   |             - ^^^ expected "Rust" fn, found "C" fn
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected fn pointer `fn()`
                 found fn item `extern "C" fn() {bar}`
note: function defined here
  --> $DIR/extern-rust-fn-type-error-10764.rs:3:4
   |
LL | fn f(_: extern "Rust" fn()) {}
   |    ^ ---------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
